<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="?attr/color_background_primary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/color_background_primary"
            android:layout_marginTop="@dimen/toolbar_height"/>

        <com.plutonem.ui.ActionableEmptyView
            android:id="@+id/actionable_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:aevButton="@string/messages_empty_list_button"
            app:aevImage="@drawable/img_illustration_notifications_152dp"
            app:aevSubtitle="@string/messages_empty_action_unread"
            app:aevTitle="@string/messages_empty_unread"
            tools:visibility="visible">
        </com.plutonem.ui.ActionableEmptyView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>