<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_main" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height">

        <!-- used to host quick start focus view - must be RelativeLayout or FrameLayout -->
        <RelativeLayout
            android:id="@+id/my_buyer_scroll_view_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:clipToPadding="false"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/blavatar_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/wordpress_margin_extra_extra_medium_large"
                    app:cardCornerRadius="@dimen/wordpress_my_buyer_blavatar_container_corner_radius"
                    app:cardElevation="0dp"
                    app:strokeColor="?attr/pnColorOnSurfaceMedium"
                    app:strokeWidth="@dimen/my_buyer_blavatar_container_border_width">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/wordpress_my_buyer_blavatar_sz"
                        android:layout_height="@dimen/wordpress_my_buyer_blavatar_sz"
                        android:layout_margin="@dimen/margin_small"
                        app:cardCornerRadius="@dimen/wordpress_my_buyer_blavatar_corner_radius"
                        app:cardElevation="0dp">

                        <ProgressBar
                            android:id="@+id/my_buyer_icon_progress"
                            android:layout_width="@dimen/wordpress_my_buyer_blavatar_sz"
                            android:layout_height="@dimen/wordpress_my_buyer_blavatar_sz"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/margin_large"
                            android:gravity="center_vertical"
                            android:indeterminate="true"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/my_buyer_blavatar"
                            android:layout_width="@dimen/wordpress_my_buyer_blavatar_sz"
                            android:layout_height="@dimen/wordpress_my_buyer_blavatar_sz"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:contentDescription="@string/my_buyer_icon_content_description"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:gravity="center_vertical"
                            tools:ignore="UnusedAttribute"
                            tools:src="@drawable/bg_rectangle_neutral_10_globe_32dp" />
                    </com.google.android.material.card.MaterialCardView>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:id="@+id/buyer_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/content_margin"
                    android:paddingEnd="@dimen/content_margin">

                    <com.plutonem.widgets.PNTextView
                        android:id="@+id/my_buyer_title_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:text="Example" />

                    <com.plutonem.widgets.PNTextView
                        android:id="@+id/my_buyer_subtitle_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_small"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/pnColorOnSurfaceMedium"
                        tools:text="enjoy shopping in plutonem !" />
                </LinearLayout>

                <com.plutonem.widgets.PNTextView
                    android:id="@+id/my_order"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/wordpress_margin_extra_extra_medium_large"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/my_buyer_btn_my_order" />

                <LinearLayout
                    android:id="@+id/quick_action_buttons_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/wordpress_margin_my_buyer_quick_actions_bottom"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/content_margin"
                    android:paddingEnd="@dimen/content_margin"
                    android:weightSum="50">

                    <LinearLayout
                        android:id="@+id/quick_action_await_delivery_container"
                        style="@style/MyBuyerQuickActionButtonContainer">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/quick_action_await_delivery_button"
                            style="@style/MyBuyerQuickActionButton"
                            android:src="@drawable/ic_await_delivery_white_24dp" />

                        <com.plutonem.widgets.PNTextView
                            style="@style/MyBuyerQuickActionButtonLabel"
                            android:text="@string/await_delivery" />
                    </LinearLayout>

                    <LinearLayout style="@style/MyBuyerQuickActionButtonContainer">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/quick_action_await_receive_button"
                            style="@style/MyBuyerQuickActionButton"
                            android:src="@drawable/ic_await_receive_white_24dp" />

                        <com.plutonem.widgets.PNTextView
                            style="@style/MyBuyerQuickActionButtonLabel"
                            android:text="@string/await_receive" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>